See doc for 0.0.1-alpha.6 release changes.

--- a/example/Views/Index.html
+++ b/example/Views/Index.html
@@ -34,6 +34,7 @@ MIT License: https://raw.githubusercontent.com/Magnitus-/ExpressUser/master/Lice
                 <input type="text" name="Password" />
                 <button>Submit</button>
             </form>
+            <p class='Error'></p>
         </section>
         <section class="Modify">
             <form>
